fix(episodetranscript): auto scrolling on mobile
- auto scrolling will focus current line instead of block
- fix issue with view change animation breaking backdrop filter blur on children
- fix layout of episode cards on mobile

--- a/components/Listen/Episode/Episode.module.scss
+++ b/components/Listen/Episode/Episode.module.scss
@@ -252,6 +252,9 @@ $episode-breakpoint--full: 120ch;
 
 .content {
   position: relative;
+  padding-block-end: calc(
+    var(--gutter-size-block-end, var(--gutter-size-block)) + var(--gap)
+  );
 
   & > * {
     scroll-snap-type: y proximity;
