--- a/components/Listen/Listen.use.scss
+++ b/components/Listen/Listen.use.scss
@@ -18,8 +18,6 @@ $breakpoint-ultra: 1800px;
   & {
     overflow: hidden;
     overflow-y: auto;
-
-    padding-inline-end: 0.5rem;
   }
 
   &::-webkit-scrollbar {
